--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ dist/
 # Sentinel-K Specific
 # 排除总纲源文件（保留在本地）
 【总纲】Sentinel-K_开发规约手册.md
+一种面向大语言模型代码生成的受控执行模型 (Sentinel-K)及其过程度量研究(1).pdf
 
 # Sensitive
 .env
